--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,11 +1,11 @@
 
 	
 	<div class="limiter">
-		<div class="container-login100" style="padding: 20px; background-image: linear-gradient(to right, #5675b9, #00010a);">
-			<div class="wrap-login100 p-l-55 p-r-55 p-t-51 p-b-54">
+		<div class="container-login100" style="padding: 20px; background-image: linear-gradient(to right, #5675b9, #3a4499);">
+			<div class="wrap-login100 p-l-55 p-r-55 p-t-44 p-b-54">
 				<form class="login100-form validate-form">
 					<span class="login100-form-title p-b-49" style="text-transform: uppercase;">
-						Entrar
+						<img src="/assets/img-icons/img/GAME MANIA2.png">
 					</span>
 
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Nome de usuário necessário">
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 
-					<div class="txt1 text-center p-t-54 p-b-20">
+					<div class="txt1 text-center p-t-36 p-b-20 ">
 						<span>
 							Ou se cadastre com:
 						</span>
