--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -112,7 +112,6 @@
     color: #333333;
     text-transform: uppercase;
   }
-  
   .bg1 {background-color: #3b5998}
   .bg2 {background-color: #1da1f2}
   .bg3 {background-color: #ea4335}
@@ -145,8 +144,8 @@
   
   .wrap-login100 {
     width: 450px;
-    height: 635px;
-    background: #fff;
+    height: 642px;
+    background: #101010;
     border-radius: 10px;
     overflow: hidden;
   }
@@ -160,16 +159,22 @@
   }
   
   .login100-form-title {
-    display: block;
-    font-family: 'Poppins', sans-serif;
-    font-size: 32px;
+    display: flex;
     font-weight: 570;
     color: #333333;
-    line-height: 1.2;
-    text-align: center;
+    line-height: 1.8;
+    align-items: center;
+    margin: 0 auto;
   }
   
-  
+  .login100-form-title img{
+    display: flex;
+    margin: 0 auto;
+    color: #333333;
+    align-items: center;
+    width: 100%;
+    max-width: 65%;
+  }
   
   /*------------------------------------------------------------------
   [ Input ]*/
@@ -183,7 +188,7 @@
   .label-input100 {
     font-family: 'Open Sans';
     font-size: 16px;
-    color: #606060;
+    color: #ffffff;
     line-height: 1.5;
     padding-left: 7px;
   }
@@ -191,7 +196,7 @@
   .input100 {
     font-family: 'Open Sans', sans-serif;
     font-size: 15.4px;
-    color: #505050;
+    color: #ffffff;
     line-height: 1.2;
   
     display: block;
@@ -300,10 +305,8 @@
     width: 300%;
     height: 100%;
     background: #3d5ce9;
-    background: -webkit-linear-gradient(right, #4d7cda, #0758ba , #4d7cda, #0758ba);
-    background: -o-linear-gradient(right,  #4d7cda, #0758ba, #4d7cda, #0758ba);
-    background: -moz-linear-gradient(right,  #4d7cda, #0758ba,  #4d7cda, #0758ba);
-    background: linear-gradient(right,  #4d7cda, #0758ba, #4d7cda, #0758ba);
+    background-image: linear-gradient(to right, #5987e3, #0950a7 , #5987e3, #0950a7 );
+    
     top: 0;
     left: -100%;
   
@@ -403,8 +406,7 @@
       opacity: 1;
     }
   }
-  
-  
+
   /*//////////////////////////////////////////////////////////////////
   [ Social item ]*/
   .login100-social-item {
@@ -422,6 +424,7 @@
     height: 50px;
     border-radius: 50%;
     margin: 5px;
+    text-decoration: none;
   }
   
   .login100-social-item:hover {
