--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,37 +1,5 @@
-<header class="header-gamemania">
-    <!-- NavBar -->
-    <div class="container-grid cabecalho d-flex align-items-center">
-        <img class="logo container-grid" src="/assets/img-icons/img/GAME MANIA2.png" alt="Logo da página" >
-        <div>
-            <form class="pesquisa-produtos container-grid-img d-flex align-items-center">
-                <input type="search"  placeholder="Busque aqui o seu produto">
-                <button type="submit"><img src="/assets/img-icons/icons/Rectangle 20.png"></button>
-            </form>
-        </div>
-        <!-- Menu -->
-        <nav id="menu" class="menu container">          
-            <a href="index.html">HOME</a>
-            <a href="#">CONTATO</a>
-            <a href="#">SOBRE NÓS</a>
-            <a routerLink="/login">ENTRAR / CADASTRAR</a>
-        </nav>
 
-        <!--MENU HAMBURGUER-->
-        <div class="hamburger-menu" id="barras">
-            <input id="menu__toggle" type="checkbox" />
-            <label class="menu__btn" for="menu__toggle">
-              <span></span>
-            </label>
-        
-            <ul class="menu__box  container" >
-                <li><a class="menu__item" href="#">Home</a></li>
-                <li><a class="menu__item" href="#">Contato</a></li>
-                <li><a class="menu__item" href="#">Sobre nós</a></li>
-                <li><a class="menu__item" href="#">Entrar/Cadastrar</a></li>
-            </ul>
-          </div>
-    </div>
-</header>
+<app-header></app-header>
 
 <!-- Main -->
 <main class="container container-grid">
@@ -318,81 +286,3 @@
 </main>
 
  <!-- FOOTER -->
-<footer>
-    <div class="afooter align-items-center container-grid">
-        <div class="align-items-center footer">
-            <!--CONTATOS-->
-            <section class="contatos-redes-sociais">
-                <h3>Contatos</h3>
-                <a href="" class="d-flex cont-red">
-                    <img src="/assets/img-icons/icons/whatsapp.png">
-                    <p>+55 91 4002-8922</p>
-                </a>
-                <a href="#" class="d-flex cont-red">
-                    <img src="/assets/img-icons/icons/messenger.png">
-                    <p>Game Mania</p>
-                </a>
-                <a href="" class="d-flex cont-red">
-                    <img src="/assets/img-icons/icons/email.png">
-                    <p>contact.gamemania@gmail.com</p>
-                </a>
-            </section>
-
-            <!--NEWSLETTER-->
-            <div class="justify-content-between d-flex align-items-center">
-
-                <fieldset  id="newsletter" class="justify-content-between">
-                    
-                    <legend>RECEBA AVISOS DE PROMOÇÕES E CUPONS NO SEU E-MAIL!</legend>
-
-                        <form class="justify-content-between align-items-center">
-                                    <input id="campo-email" type="email" placeholder="DIGITE O SEU MELHOR E-MAIL" required>
-                                
-                            <div class="formulario">
-                                    <div class="checkbox d-flex">
-                                        <input type="checkbox" id="scales" name="scales" required>
-                                        <label class="checkbox-a" for="scales"><a href="">ACEITO RECEBER NOTIFICAÇÕES DA GAME MANIA</a></label>
-                                    </div>
-
-                                    <div class="checkbox d-flex align-items-center">
-                                        <input type="checkbox" id="horns" name="horns" required>
-                                        <label class="checkbox-a" for="horns"><a href="">ACEITO QUE COMPARTILHEM MEUS DADOS APENAS E SOMENTE NA PLATAFORMA</a></label>
-                                    </div>
-                                    <button onclick="cadastrarNewsletter()">Confirmar</button>
-                            </div>
-                        </form>
-                </fieldset>
-            </div>
-
-            <!-- REDES SOCIAIS-->
-            <section class="contatos-redes-sociais">
-                <h3>Redes Sociais</h3>
-                <a href="" class="d-flex cont-red">
-                    <img src="/assets/img-icons/icons/twitter.png">
-                    <p>@GameMania</p>
-                </a>
-                <a href="" class="d-flex cont-red">
-                    <img src="/assets/img-icons/icons/instagram.png">
-                    <p>@GameMania_Br</p>
-                </a>
-                <a href="" class="d-flex cont-red">
-                    <img src="/assets/img-icons/icons/youtube.png">
-                    <p>https://gamemania.com</p>
-                </a>
-            </section>
-        </div>  
-
-        <!--FINAL-->
-        <div class="fim-footer align-items-center">
-            <img class="logo2" src="/assets/img-icons/img/GAME MANIA2.png">
-            <p>CNPJ: 01.234.567/0001-89</p>
-            <div style="margin-top: 15px;">
-                <div class="location">
-                    <img style="margin-right: 0.71vw;" src="/assets/img-icons/icons/periscope.png">
-                    <p>Tv. Dom Pedro II, nº 8, São Paulo, SP - Brazil,</p>
-                </div>
-            </div>
-            <p>CEP: 55084-554</p>
-        </div>
-    </div>          
-</footer>
