--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -3,59 +3,63 @@
 	<div class="limiter">
 		<div class="container-login100" style="padding: 20px; background-image: linear-gradient(to right, #a2d1e7, #609fda);">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-44 p-b-54">
-				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-49" style="text-transform: uppercase;">
-						<img src="/assets/img-icons/img/GAME MANIA2.png">
-					</span>
 
-					<div class="wrap-input100 validate-input m-b-23" data-validate = "Nome de usuário necessário">
-						<span class="label-input100">Nome de Usuário</span>
-						<input class="input100" type="text" name="username" placeholder="Digite seu username" required>
-						<span class="focus-input100" data-symbol="&#xf206;"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="É necessário uma senha">
-						<span class="label-input100">Senha</span>
-						<input class="input100" type="password" name="pass" placeholder="Digite sua senha" required>
-						<span class="focus-input100" data-symbol="&#xf190;"></span>
-					</div>
-					
-					<div class="text-right p-t-8 p-b-31">
-						<a href="#">
-							Esqueceu a senha?
-						</a>
-					</div>
-					
-					<div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
-								Entrar
-							</button>
-						</div>
-					</div>
-
-					<div class="txt1 text-center p-t-36 p-b-20 ">
-						<span>
-							Ou se cadastre com:
+					<form (ngSubmit)="receberDados()" class="login100-form validate-form">
+						<span class="login100-form-title p-b-49" style="text-transform: uppercase;">
+							<img src="/assets/img-icons/img/GAME MANIA2.png">
 						</span>
-					</div>
 
-					<div class="flex-c-m">
-						<a href="#" class="login100-social-item bg1">
-							<i class="fa fa-facebook"></i>
-						</a>
+						<div class="wrap-input100 validate-input m-b-23" data-validate = "Nome de usuário necessário">
+							<span class="label-input100">Email de usuário</span>
 
-						<a href="#" class="login100-social-item bg2">
-							<i class="fa fa-twitter"></i>
-						</a>
+							<input class="input100" type="email" name="email" placeholder="Digite seu email" [(ngModel)]="userModel.email" required>
+							
+							<span class="focus-input100" data-symbol="&#xf206;"></span>
+						</div>
 
-						<a href="#" class="login100-social-item bg3">
-							<i class="fa fa-google"></i>
-						</a>
-					</div>
+						<div class="wrap-input100 validate-input" data-validate="É necessário uma senha">
+							<span class="label-input100">Senha</span>
 
-				</form>
+							<input class="input100" type="password" name="password" placeholder="Digite sua senha" [(ngModel)]="userModel.password" required>
+							
+							<span class="focus-input100" data-symbol="&#xf190;"></span>
+						</div>
+						
+						<div class="text-right p-t-8 p-b-31">
+							<a href="#">
+								Esqueceu a senha?
+							</a>
+						</div>
+						
+						<div class="container-login100-form-btn">
+							<div class="wrap-login100-form-btn">
+								<div class="login100-form-bgbtn"></div>
+								<button class="login100-form-btn" type="submit">
+									Entrar
+								</button>
+							</div>
+						</div>
+
+						<div class="txt1 text-center p-t-36 p-b-20 ">
+							<span>
+								Ou se cadastre com:
+							</span>
+						</div>
+
+						<div class="flex-c-m">
+							<a href="#" class="login100-social-item bg1" >
+								<i class="fa fa-facebook"></i>
+							</a>
+
+							<a href="#" class="login100-social-item bg2" >
+								<i class="fa fa-twitter"></i>
+							</a>
+
+							<a href="#" class="login100-social-item bg3" >
+								<i class="fa fa-google"></i>
+							</a>
+						</div>
+					</form>
 			</div>
 		</div>
 	</div>
