--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -265,6 +265,9 @@ header {
     }
 }
 @media screen and (max-width: 850px) {
+    .container-grid-header {
+        width: 62.5vw !important;
+    }
     .cabecalho button {
         display: none;
     }
@@ -288,6 +291,15 @@ header {
     }
 }
 @media screen and (max-width: 770px) {
+    .container-grid-header {
+        width: 65.5vw !important;
+    }
+    .menu__item {
+        font-size: 1.47vw;
+    }
+    .menu__box {
+        max-width: 25.7vw;
+      }
     .menu__item {
         font-size: 1.47vw;
     }
@@ -303,7 +315,20 @@ header {
     margin: 0%;
    }
 }
-@media screen and (max-width: 550px) {  
+@media screen and (max-width: 550px) {
+    .container-grid-header {
+        width: 63vw !important;
+    }
+    .logo {
+        width: 100%;
+        max-width: 18.5vw !important;
+    }
+    .menu__box {
+        max-width: 28.41vw;
+    }
+    .menu__item {
+        font-size: 1.76vw;
+    }  
     .logo {
         width: 100%;
         max-width: 18.5vw !important;
@@ -316,6 +341,9 @@ header {
     }
 }
 @media screen and (max-width: 330px) {
+    .container-grid-header {
+        width: 66vw !important;
+    }
     .menu__box {
         width: 100%;
         max-width: 31.55vw !important;
@@ -328,5 +356,30 @@ header {
     .logo {
         width: 100%;
         max-width: 24vw !important;
+    }
+}
+@media screen and (max-width: 285px) {
+    .container-grid-header {
+        width: 64vw !important;
+    }
+      .logo {
+        width: 100%;
+        max-width: 33vw !important;
+      }
+    
+    .menu__btn {
+        position: relative;
+        width: 20.7px;
+        cursor: pointer;
+      }
+      .logo {
+        width: 100%;
+        max-width: 33vw !important;
+      }
+      .menu__box {
+        max-width: 37.7vw !important;
+    }
+    .menu__item {
+        font-size: 2.61vw !important;
     }
 }
