--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header-gamemania">
     <!-- NavBar -->
-    <div class="container-grid cabecalho d-flex align-items-center">
+    <div class="container-grid container-grid-header cabecalho d-flex align-items-center">
         <img class="logo container-grid" src="/assets/img-icons/img/GAME MANIA2.png" alt="Logo da página" >
         <div>
             <form class="pesquisa-produtos container-grid-img d-flex align-items-center">
