--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -486,7 +486,37 @@
         padding: 0.65vw 2.18vw;
     } 
 }
+@media screen and (max-width: 850px) {
+    .banner {
+        width: 100%;
+        max-width: 63.5vw !important;
+    }
+    .container-grid {
+        width: 68vw !important;
+    }
+    .inital {
+        width: 100%;
+        max-width: 61.5vw !important;
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+        align-content: space-between;
+    }
+    .inital h1 {
+        margin-right: 0px !important;
+    }
+    #carrinho {
+        margin-left: 0px !important;
+    }
+}
 @media screen and (max-width: 770px) {
+    .container-grid {
+        width: 69.4vw !important;
+        align-items: center;
+    }
+    .container-grid-initial {
+        width: 67.4vw !important;
+    }
    .card-produtos h4 {
     font-size:  1.7vw;
    }
@@ -567,13 +597,17 @@
         max-width: 3.6vw;
     }
 }
-@media screen and (max-width: 550px) {  
+@media screen and (max-width: 550px) {
+    .container-grid {
+        width: 69vw !important;
+        align-items: center;
+    } 
     .card-produtos h4 {
         font-size: 2vw;
     }
     .pesquisa-produtos2 {
         margin-top: 1.9vw;
-        height: 5.3vw;
+        height: 5.5vw;
         width: 64vw;
     }
     .initial h1 {
@@ -597,6 +631,26 @@
     }
     .aviso-promocao p {
         font-size: 1.2vw;
+    }
+}
+@media screen and (max-width: 440px) {
+    .pesquisa-produtos2 {
+        width: 63.5vw;
+        height: 6.5vw;
+    }
+    #carrinho p {
+        font-size: 1.17vw;
+        margin-left: 0.24vw;
+    }
+    .container-grid {
+        width: 69vw;
+    }
+    #carrinho a {
+        max-width: 20vw !important;
+        height: 4.84vw;
+    }
+    .banner {
+        width: 64vw !important;
     }
 }
 @media screen and (max-width: 330px) {
@@ -626,7 +680,7 @@
         font-size: 2vw;
     }
     .pesquisa-produtos2 {
-        height: 6.7vw;
+        height: 6.8vw;
     }
     .cabecalho2 input::placeholder {
         font-size: 2.2vw;
@@ -652,5 +706,23 @@
     .nome-produto {
         font-size: 1.88vw;
         margin: 0.5vw;
+    }
+}
+@media screen and (max-width: 285px) {
+    #carrinho p {
+        font-size: 1.09vw !important;
+    }
+    .pesquisa-produtos2 {
+        height: 7.6vw !important;
+    }
+    .container-grid {
+        width: 72vw !important;
+        align-items: center;
+    }
+    .card button {
+        font-size: 5.52px;
+    }
+    .nome-produto {
+        font-size: 1.9vw;
     }
 }
