--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 
 <!-- Main -->
-<main class="container container-grid">
+<main class="container container-grid-initial container-grid">
     <!-- Boas-vindas e carrinho -->
     <div class="initial-pai">
         <div class="initial">
