--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,7 +1,7 @@
 
 	
 	<div class="limiter">
-		<div class="container-login100" style="padding: 20px; background-image: linear-gradient(to right, #a2d1e7, #609fda);">
+		<div class="container-login100" style=" background-image: linear-gradient(to right, #a2d1e7, #609fda);">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-44 p-b-54">
 
 					<form (ngSubmit)="receberDados()" class="login100-form validate-form">
