--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -140,10 +140,19 @@
     background-position: center;
     background-size: cover;
   }
-  
+  #mensagem {
+    color: red;
+    font-size: 16px;
+    padding: 0%;
+    margin: 0%;
+    align-items: center;
+    text-align: center;
+    font-weight: 500;
+    font-family: 'Open Sans', sans-serif;
+  }
   .wrap-login100 {
     width: 450px;
-    height: 642px;
+    height: 652px;
     background: #101010;
     border-radius: 10px;
     overflow: hidden;
@@ -172,7 +181,7 @@
     color: #333333;
     align-items: center;
     width: 100%;
-    max-width: 65%;
+    max-width: 61.5%;
   }
   
   /*------------------------------------------------------------------
