--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,13 +1,16 @@
-
+						
 	
 	<div class="limiter">
+
 		<div class="container-login100" style=" background-image: linear-gradient(to right, #a2d1e7, #609fda);">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-44 p-b-54">
 
 					<form (ngSubmit)="receberDados()" class="login100-form validate-form">
-						<span class="login100-form-title p-b-49" style="text-transform: uppercase;">
+						<span class="login100-form-title p-b-45" style="text-transform: uppercase;">
 							<img src="/assets/img-icons/img/GAME MANIA2.png">
 						</span>
+						
+						<p id="mensagem" *ngIf =" mensagem != '' ">{{ mensagem}}</p> 
 
 						<div class="wrap-input100 validate-input m-b-23" data-validate = "Nome de usuário necessário">
 							<span class="label-input100">Email de usuário</span>
@@ -59,12 +62,14 @@
 								<i class="fa fa-google"></i>
 							</a>
 						</div>
-					</form>
+					</form> 
 			</div>
 		</div>
+
 	</div>
+	<div id="dropDownSelect1"></div>
+	
 	
 
-	<div id="dropDownSelect1"></div>
 	
 
